--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -1,20 +1,5 @@
 html {
     box-sizing: border-box;
-    width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-    
-    @include mq (mobile-only) {
-        width: 480px;
-    }
-
-    @include mq (tablet) {
-        width: 768px;
-    }
-
-    @include mq (desktop) {
-        width: 1600px;
-    }
 }
 
 body {
@@ -42,6 +27,12 @@ body {
 
 .subtitle__title {
     @include mq (mobile-only) {
+        display: block;
+
+        min-width: 480px;
+    
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 0;
         margin-bottom: 30px;
 
