--- a/scss/layouts/_clients.scss
+++ b/scss/layouts/_clients.scss
@@ -2,6 +2,14 @@
 
 .clients {
     @include mq (mobile-only) {
+        display: block;
+        text-align: center;
+    
+
+        min-width: 480px;
+    
+        margin-left: auto;
+        margin-right: auto;
         display: flex;
         flex-wrap: wrap;
         margin: -15px;
