--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -2,24 +2,32 @@
 
 .footer {
     @include mq (mobile-only) {
+        display: block;
+        text-align: center;
+
+        min-width: 480px;
+    
+        margin-left: auto;
+        margin-right: auto;
         padding-top: 60px;
         padding-bottom: 60px;
         background-color: #2F303A;
-        height: 604px;
+        height: 615px;
+
     }
 
     @include mq (tablet-only) {
         padding-top: 60px;
         padding-bottom: 60px;
         background-color: #2F303A;
-        height: 464px;
+        height: 475px;
     }
 
     @include mq (desktop) {
         padding-top: 60px;
         padding-bottom: 60px;
         background-color: #2F303A;
-        height: 251px;
+        height: 255px;
     }
 }
 
@@ -67,6 +75,7 @@
     }
 
     @include mq (desktop) {
+        justify-content: flex-start;
         width: 231px;
     }
 }
@@ -107,19 +116,19 @@
     }
 }
 
-// .address__conact {
-//     @include mq (mobile-only) {
-//         display: block;
-//         margin-bottom: 12px;
-//         padding: 0;
-//     }
+.address__conact {
+    @include mq (mobile-only) {
+        display: block;
+        margin-bottom: 5px;
+        padding: 0;
+    }
 
-//     @include mq (tablet) {
-//         display: block;
-//         margin-bottom: 12px;
-//         padding: 0;
-//     }
-// }
+    @include mq (tablet) {
+        display: block;
+        margin-bottom: 5px;
+        padding: 0;
+    }
+}
 
 .address__link {
 
