--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -7,7 +7,7 @@
     padding-bottom: 198px;
     background-color: #C4C4C4;
 
-    width: 480px;
+    min-width: 480px;
     height: 400px;
     margin-left: auto;
     margin-right: auto;
@@ -37,7 +37,7 @@
         padding-bottom: 198px;
         background-color: #C4C4C4;
 
-        width: 768px;
+        min-width: 768px;
         height: 400px;
         margin-left: auto;
         margin-right: auto;
@@ -54,6 +54,9 @@
                 rgba(2, 2, 61, 0.4)),
             url(../images/header-tab-img@2x.jpg);
         }
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     }
 
     @include mq (desktop) {
@@ -63,7 +66,7 @@
         padding-bottom: 280px;
         background-color: #C4C4C4;
 
-        width: 1600px;
+        max-width: 1600px;
         height: 600px;
         margin-left: auto;
         margin-right: auto;
@@ -80,6 +83,9 @@
                 rgba(2, 2, 61, 0.4)),
             url(../images/header-desk@2x.jpg);
         }
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     }
 }
 
