--- a/css/main.css
+++ b/css/main.css
@@ -594,11 +594,11 @@ img {
 
 @media screen and (max-width: 767.98px) {
   .mobai-menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    min-width: 480px;
-    height: 796px;
+    min-width: 100%;
+    height: 100%;
     padding-top: 48px;
     padding-bottom: 48px;
     padding-left: 40px;
@@ -652,7 +652,7 @@ img {
   fill: var(--accent-color);
 }
 
-.nav-menu__item {
+.nav-menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
@@ -685,7 +685,7 @@ img {
 }
 
 .mobail-menu__contacts {
-  margin-top: auto;
+  margin-top: 306px;
 }
 
 .menu-contacts__link {
