--- a/scss/components/_mobai-menu.scss
+++ b/scss/components/_mobai-menu.scss
@@ -1,10 +1,10 @@
 .mobai-menu{
     @include mq (mobile-only) {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
-        min-width: 480px;
-        height: 796px;
+        min-width: 100%;
+        height: 100%;
         padding-top: 48px;
         padding-bottom: 48px;
         padding-left: 40px;
@@ -20,7 +20,8 @@
             0px 4px 8px 0px rgba(0, 0, 0, 0.04);
 
         transform: translateY(-100%);
-        transition: opacity var(--time-animation), transform var(--time-animation);
+        transition: opacity var(--time-animation), 
+        transform var(--time-animation);
 
         &.is-open {
             transform: translateX(0);
@@ -54,7 +55,7 @@
         } 
 }
 
-.nav-menu__item {
+.nav-menu__item:not(:last-child) {
     margin-bottom: 32px;
 }
 
@@ -88,7 +89,7 @@
 }
 
 .mobail-menu__contacts {
-    margin-top: auto;
+    margin-top: 306px;
 }
 
 .menu-contacts__link {
